--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -66,7 +66,10 @@
 					height: 105px;" [src]="matchingUsers?.profile?.photo ? userprofilepath+matchingUsers?.profile?.photo : 'assets/images/user-img-icon.jpg'">
 								</div>
 								<div class="text">
-								<a [routerLink]="['/employer/candidate-profile']" [queryParams]="{location_id: matchingUsers?.profile?.job_location?.id,id: matchingUsers?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;"><h5 class="text-capitalize">{{(matchingUsers?.profile?.first_name ? matchingUsers?.profile?.first_name : '') + ' '
+								<a *ngIf="!router.url.includes('admin')" [routerLink]="['/employer/candidate-profile']" [queryParams]="{location_id: matchingUsers?.profile?.job_location?.id,id: matchingUsers?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;"><h5 class="text-capitalize">{{(matchingUsers?.profile?.first_name ? matchingUsers?.profile?.first_name : '') + ' '
+					+ (matchingUsers?.profile?.last_name ? matchingUsers?.profile?.last_name : '')}}<small *ngIf="matchingUsers?.profile?.job_role"> -
+					{{matchingUsers?.profile?.job_role}}</small></h5></a>
+					            <a *ngIf="router.url.includes('admin')" [routerLink]="['/admin/candidate-profile']" [queryParams]="{location_id: matchingUsers?.profile?.job_location?.id,id: matchingUsers?.profile?.id, jobId: postedJobsDetails?.id,empids:empID}" href="javascript:;"><h5 class="text-capitalize">{{(matchingUsers?.profile?.first_name ? matchingUsers?.profile?.first_name : '') + ' '
 					+ (matchingUsers?.profile?.last_name ? matchingUsers?.profile?.last_name : '')}}<small *ngIf="matchingUsers?.profile?.job_role"> -
 					{{matchingUsers?.profile?.job_role}}</small></h5></a>
 									<h5 class="text-capitalize"><small>{{matchingUsers?.profile?.city ? matchingUsers?.profile?.city+', '  : ''}}
