--- a/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
@@ -101,7 +101,10 @@
 								<i class="fas fa-file-alt mr-1"></i>{{"shared.jobDescription" | translate}}</a> &nbsp;
 							
 							<span>
-								<a class="btn btn-outline-light btn-sm" [routerLink]="['/employer/dashboard']" [queryParams]="{activeTab:'matches',id: matchingJob?.jobs?.id}" routerLinkActive="router-link-active" >	
+								<a *ngIf="!router.url.includes('admin')" class="btn btn-outline-light btn-sm" [routerLink]="['/employer/dashboard']" [queryParams]="{activeTab:'matches',id: matchingJob?.jobs?.id}" routerLinkActive="router-link-active" >	
+								<i class="fas fa-tasks"></i>{{"tabs.matches" | translate}}</a>
+								
+								<a *ngIf="router.url.includes('admin')" class="btn btn-outline-light btn-sm" [routerLink]="['/admin/employer-dashboard']" [queryParams]="{activeTab:'matches',id: matchingJob?.jobs?.id,empids:employeeID}" routerLinkActive="router-link-active" >	
 								<i class="fas fa-tasks"></i>{{"tabs.matches" | translate}}</a>
 							</span>
 						</div>
