sap admin profile password update feature

--- a/admin/src/app/pages/profile/admin-setting/admin-setting.component.html
+++ b/admin/src/app/pages/profile/admin-setting/admin-setting.component.html
@@ -1,12 +1,11 @@
-<section class="my-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 title">
-      </div>
-    </div>
-    <form formGroup="changePasswordForm" (ngSubmit)="change()">
-<div class="row">
-  <div class="col-lg-4 col-md-6">
+
+<section class="my-10 ml-5">
+<h3>Account Setting</h3>
+<hr>
+	<div class="container" style="margin-top:1rem;">
+<form [formGroup]="changePasswordForm" (ngSubmit)="change()">
+<div  class=" row">
+  <div class="col-lg-4 col-md-12">
       <div class="form-group">
         <label>User Name</label>
         <div class="input-with-icon">
@@ -15,43 +14,66 @@
         </div>
       </div>
       <div class="form-group">
-        <label>Current Password</label>
-        <div appMarkAsterisk class="input-with-icon">
+        <label>Current Password <span style="color:red;">*</span></label>
+        <div  class="input-with-icon">
           <input type="password" class="form-control" [placeholder]="'Current Password'" formControlName="current_password">
           <i class="fas fa-lock"></i>
         </div>
         <app-control-messages [control]="f['current_password']"></app-control-messages>
+		<small class="text-danger" *ngIf="formError?.length > 0 && formError[0]?.field == 'current_password'">
+		<!--{{formError[0]?.rules[0]?.rule == 'min' ? formError[0]?.rules[0]?.message : ''}}
+		{{formError[0]?.rules[0]?.rule == 'invalid' ? formError[0]?.rules[0]?.message : ''}}-->
+		Invalid current password.
+		</small>
       </div>
       <div class="form-group">
-        <label>New Password</label>
-        <div appMarkAsterisk class="input-with-icon input-group">
-          <input appPassword type="password" class="form-control" [placeholder]="'New Password'" formControlName="password">
+        <label>New Password <span style="color:red;">*</span></label>
+        <div  class="input-with-icon input-group">
+		  <input name="password" [type]="showPassword ? 'text' : 'password'" class="form-control" [placeholder]="'New Password'" formControlName="password">
+		  <div class='input-group-append'>
+			<span style='cursor: pointer;' class='btn input-icon input-group-text'>
+				<i alt="show" style="left:0px !important;" class="far fa-eye eye-show" 
+			  (click)="showPassword = !showPassword"
+			  [class.hide]="showPassword"></i>
+			  <i alt="hide" class="far fa-eye-slash eye-hide" 
+			  (click)="showPassword = !showPassword"
+			  [class.hide]="!showPassword"></i>
+			</span>
+			</div>
           <i class="fas fa-lock"></i>
-		  <div class="input-group-append"><span style="cursor: pointer;" class="btn input-icon input-group-text"><i class="fas fa-eye"></i></span></div>
         </div>
         <app-control-messages [control]="f['password']"></app-control-messages>
       </div>
       <div class="form-group">
-        <label>Confirm Password</label>
-        <div appMarkAsterisk class="input-with-icon input-group">
-          <input appPassword type="password" class="form-control" [placeholder]="'Confirm Password'" formControlName="confirmPassword">
+        <label>Confirm Password <span style="color:red;">*</span></label>
+        <div  class="input-with-icon input-group">
+		  <input name="password" [type]="showPasswords ? 'text' : 'password'" class="form-control" [placeholder]="'Confirm Password'" formControlName="confirmPassword">
+		  <div class='input-group-append'>
+			<span style='cursor: pointer;' class='btn input-icon input-group-text'>
+				<i alt="show" style="left:0px !important;" class="far fa-eye eye-show" 
+			  (click)="showPasswords = !showPasswords"
+			  [class.hide]="showPasswords"></i>
+			  <i alt="hide" class="far fa-eye-slash eye-hide" 
+			  (click)="showPasswords = !showPasswords"
+			  [class.hide]="!showPasswords"></i>
+			</span>
+			</div>
           <i class="fas fa-lock"></i>
-		  <div class="input-group-append"><span style="cursor: pointer;" class="btn input-icon input-group-text"><i class="fas fa-eye"></i></span></div>
         </div>
         <app-control-messages [control]="f['confirmPassword']"></app-control-messages>
       </div>
   </div>
 </div>
 <div class="row mt-5">
-  <div class="col-lg-4 col-md-6">
+  <!--<div class="col-lg-4 col-md-6">
     <div class="form-group">
-      <button type="button" class="btn btn-secondary btn-block btn-lg">Cancel</button>
+      <button type="button" class="btn btn-secondary btn-block btn-lg">cancel</button>
     </div>
-  </div>
+  </div>-->
   <div class="col-lg-4 col-md-6">
     <div class="form-group">
-      <button  [disabled]="changePasswordForm.invalid" type="submit" class="btn btn-theme-blue btn-block btn-lg">
-        <span [hidden]="isLoading">Submit</span>
+      <button type="submit" class="btn btn-theme-blue btn-block btn-lg">
+        <span [hidden]="isLoading">submit</span>
           <span [hidden]="!isLoading">
             <i class="fa fa-spinner" aria-hidden="true"></i>
           </span>
@@ -60,5 +82,5 @@
   </div>
 </div>
 </form>
-  </div>
+</div>
 </section>
