--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -215,7 +215,7 @@
                   </div>
                   <div class="media">
                     <img *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(0)" [src]="item?.photo ? userMeta?.photo?.path+'/'+ userMeta?.photo?.folder+'/'+userMeta?.photo?.sizes?.medium+'/'+item?.photo+'?v='+ randomNum : 'assets/images/user-img-icon.jpg'">
-                    <ng-container *ngIf="loggedUserInfo?.role && loggedUserInfo?.role?.includes(1);">
+                    <ng-container *ngIf="loggedUserInfo?.role && (loggedUserInfo?.role?.includes(1) || loggedUserInfo?.role?.includes(2))">
                       <ng-container *ngIf="item?.privacy_protection?.photo == true; else elsePhotoTemplate">
                         <img [src]="item?.photo ? userprofilepath+item?.photo : 'assets/images/user-img-icon.jpg'">
                       </ng-container>
