sap admin profile password update ui changes

--- a/frontend/src/app/shared/component/change-password/change-password.component.html
+++ b/frontend/src/app/shared/component/change-password/change-password.component.html
@@ -8,14 +8,14 @@
           <i class="fas fa-lock"></i>
         </div>
       </div>
-      <div class="form-group">
+      <!--<div class="form-group">
         <label>{{"common.currentPassword" | translate}}</label>
         <div appMarkAsterisk class="input-with-icon">
           <input type="password" class="form-control" [placeholder]="'Current Password'" formControlName="current_password">
           <i class="fas fa-lock"></i>
         </div>
         <app-control-messages [control]="f['current_password']"></app-control-messages>
-      </div>
+      </div>-->
       <div class="form-group">
         <label>{{"common.newPassword" | translate}}</label>
         <div appMarkAsterisk class="input-with-icon input-group">
