--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -17,7 +17,7 @@
 <!-- //Sub Header Section -->
 
 <!-- Nav Tab Section -->
-<section class="nav-tab" *ngIf="dashboardView">
+<section class="nav-tab" *ngIf="dashboardView && !router.url.includes('admin')">
   <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
     <div class="row">
       <div class="col-lg-12">
