--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -836,11 +836,12 @@ a:hover {
 	margin-bottom: 5px;
 	font-size: 20px;
 	font-weight: 700;
-	text-overflow: ellipsis;
-	overflow: hidden;
+	/*text-overflow: ellipsis;
+	overflow: hidden;*/
 	width: 500px;
-	height: 1.5em;
-	white-space: nowrap;
+	/*height: 1.5em;
+	white-space: nowrap;*/
+	min-height:1.5em;
 }
 .job-card h5 small{
 	color: #11b771;
